# oru-pro

./: .env.development  .env.example  .gitattributes  .gitignore  Makefile  README.md  agents-requirements.txt  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  quality.yml
.turbo/cache/: 0fae1944630f7129-meta.json  16422af9a645422a-meta.json  16565a93c05efd6e-meta.json  19fe440c237de791-meta.json  19fe440c237de791.tar.zst  1e805489276ff306-meta.json  1e924a871a696216-meta.json  1e924a871a696216.tar.zst  21522925f9535efc-meta.json  21dd92ed25bee65e-meta.json  26aad6ddad037e64-meta.json  26aad6ddad037e64.tar.zst  29cb9222f00aa70e-meta.json  29cb9222f00aa70e.tar.zst  31a9219ce4809288-meta.json  31a9219ce4809288.tar.zst  32855224777707b4-meta.json  (+63 more)
apps/agent-orchestrator/: pyproject.toml
apps/agent-orchestrator/app/: main.py
apps/agent-orchestrator/oru_agent_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: jest.config.cjs  package.json  tsconfig.json
config/: statsd.js
scripts/: init.sql  validate-infra.mjs
services/agent-orchestrator/: README.md  main.py  pyproject.toml
services/agent-orchestrator/agents/: base_agent.py  decision_agent.py  finance_agent.py  inventory_agent.py  logistics_agent.py  production_agent.py  qa_agent.py
services/agent-orchestrator/oru_agent_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+347 files in other folders)
