[project]
name = "oru-agent-orchestrator"
version = "0.1.0"
description = "FastAPI service that coordinates domain agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi[all]==0.115.0",
  "langchain==0.2.12",
  "openai==1.37.1",
  "pydantic==2.7.4",
  "uvicorn[standard]==0.30.3",
  "redis==5.0.7",
  "celery[redis]==5.4.0"
]

[tool.uvicorn]
factory = true
