[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oru-agent-orchestrator"
version = "0.1.0"
description = "FastAPI service that coordinates domain-specific decision agents"
authors = [{ name = "Oru" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[all]==0.115.0",
  "pydantic==2.7.4",
  "uvicorn[standard]==0.30.3",
  "redis==5.0.7",
  "langchain==0.2.12",
  "openai==1.37.1",
  "celery[redis]==5.4.0",
  "numpy==1.26.4",
  "scipy==1.11.4",
  "scikit-learn==1.4.2",
  "joblib==1.4.2"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
packages = ["agents"]
py-modules = ["main"]

[tool.uvicorn]
factory = false
